--- a/src/lib/components/focus.scss
+++ b/src/lib/components/focus.scss
@@ -11,7 +11,7 @@
 }
 
 .focus-popup-content-container {
-  max-width: 460px;
+  max-width: 480px;
   background: white;
   padding: 24px;
   border-radius: 8px;
@@ -53,6 +53,9 @@ input.focus-popup-time-input {
   text-align: center;
   border: none;
   font-size: 48px;
+  width: 36px;
+  text-align: left;
+  margin-left: 12px;
 }
 
 .focus-popup-time-btn {
@@ -64,4 +67,30 @@ input.focus-popup-time-input {
   display: flex;
   border: none;
   border-radius: 100px;
+}
+
+.focus-popup-time-input-container {
+  position: relative;
+  display: flex;
+  margin-left: 18px;
+  margin-right: 18px;
+}
+
+.focus-popup-time-minute-indicator {
+  font-size: 48px;
+}
+
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+input[type="number"] {
+  -moz-appearance: textfield;
+}
+
+textarea:focus,
+input:focus {
+  outline: none;
 }
