--- a/src/app.scss
+++ b/src/app.scss
@@ -1,6 +1,6 @@
 @import "../node_modules/sn-stylekit/dist/stylekit.css";
 
-@import url("https://fonts.googleapis.com/css2?family=Noto+Sans+Hebrew:wght@400;700&family=Noto+Sans:wght@400;700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Noto+Sans+Hebrew:wght@400;700&family=Noto+Sans:wght@400;700&family=Noto+Serif+Hebrew:wght@400;700&display=swap");
 
 :root {
   --sn-stylekit-sans-serif-font: "Noto Sans Hebrew", "Noto Sans", Arial, sans-serif;
@@ -11,6 +11,11 @@ html,
 body > div {
   max-width: 100vw;
   overflow-x: hidden;
+}
+
+blockquote {
+  font-style: normal !important;
+  font-family: "Noto Serif", "Narkisim", serif;
 }
 
 html {
@@ -52,24 +57,58 @@ img {
   left: 18px;
   display: flex;
   flex-direction: column;
+
+  .app-button {
+    background: white;
+    box-shadow: 0px 2px 2px rgb(0 0 0 / 20%);
+    border-radius: 100px;
+    padding: 12px;
+    border: 1px solid #ddd;
+    margin-top: 12px;
+    width: 48px;
+    height: 48px;
+    display: flex;
+    align-items: center;
+    transition: all 120ms cubic-bezier(0.4, 0, 0.2, 1);
+  }
+
+  .app-button:hover {
+    background: #e2e1e1;
+  }
 }
 
-.app-button {
-  width: 48px;
-  height: 48px;
-  border: 1px solid #ddd;
-  border-radius: 100px;
-  padding: 12px;
+.flow-info-container {
+  background: #fff;
   display: flex;
   align-items: center;
-  background: white;
+  justify-content: center;
+  padding: 12px 18px;
+  border-radius: 8px;
+  border: 1px solid #ddd;
   box-shadow: 0px 2px 2px rgb(0 0 0 / 20%);
-  margin-top: 12px;
-  transition: all 120ms cubic-bezier(0.4, 0, 0.2, 1);
-}
+  // box-shadow: 0 3px 10px rgb(0 0 0 / 10%), 0 3px 3px rgb(0 0 0 / 5%);
 
-.app-button:hover {
-  background: #e2e1e1;
+  .flow-info {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-left: 18px;
+
+    // .flow-info-indicator {
+    //   height: 12px;
+    //   width: 12px;
+    //   border-radius: 100px;
+    //   margin-left: 8px;
+    //   background: #34684e;
+    // }
+  }
+  .flow-info-button {
+    border: 1px solid black;
+    background: transparent;
+    border-radius: 4px;
+    padding: 4px 8px;
+    margin-right: 18px;
+  }
 }
 
 .App {
