Minor styling improvements

--- a/src/app.scss
+++ b/src/app.scss
@@ -14,8 +14,8 @@ body > div {
 }
 
 blockquote {
-  font-style: normal !important;
-  font-family: "Noto Serif", "Narkisim", serif;
+  font-style: normal;
+  font-family: "Noto Serif Hebrew", "Narkisim", serif;
 }
 
 html {
