--- a/src/app.scss
+++ b/src/app.scss
@@ -72,6 +72,41 @@ img {
     display: flex;
     align-items: center;
     transition: all 120ms cubic-bezier(0.4, 0, 0.2, 1);
+
+    .app-button-tooltip {
+      visibility: hidden;
+      position: absolute;
+      left: 58px;
+      background: #181a1b;
+      color: white;
+      border-radius: 4px;
+      font-size: 14px;
+      padding: 8px 8px;
+      z-index: 1;
+      min-width: -webkit-max-content;
+      min-width: -moz-max-content;
+      min-width: max-content;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      text-align: center;
+
+      &::before {
+        content: "";
+        position: absolute;
+        left: -4px;
+        width: 12px;
+        height: 12px;
+        border-radius: 2px;
+        transform: rotate(45deg);
+        background: #181a1b;
+        z-index: -1;
+      }
+    }
+
+    &:hover .app-button-tooltip {
+      visibility: visible;
+    }
   }
 
   .app-button:hover {
