--- a/src/app.scss
+++ b/src/app.scss
@@ -73,6 +73,15 @@ img {
     align-items: center;
     transition: all 120ms cubic-bezier(0.4, 0, 0.2, 1);
 
+    &:hover {
+      background: #e2e1e1;
+    }
+
+    &:active {
+      transform: translateY(2px);
+      box-shadow: 0px 1px 1px rgb(0 0 0 / 40%);
+    }
+
     .app-button-tooltip {
       visibility: hidden;
       position: absolute;
@@ -90,6 +99,9 @@ img {
       align-items: center;
       justify-content: center;
       text-align: center;
+      transform: translateX(-4px);
+      transition: all 150ms ease;
+      transition-delay: 50ms;
 
       &::before {
         content: "";
@@ -106,11 +118,8 @@ img {
 
     &:hover .app-button-tooltip {
       visibility: visible;
+      transform: translateX(0px);
     }
-  }
-
-  .app-button:hover {
-    background: #e2e1e1;
   }
 }
 
