--- a/src/app.scss
+++ b/src/app.scss
@@ -71,7 +71,8 @@ img {
     height: 48px;
     display: flex;
     align-items: center;
-    transition: all 120ms cubic-bezier(0.4, 0, 0.2, 1);
+    will-change: transform;
+    transition: all 120ms ease;
 
     &:hover {
       background: #e2e1e1;
@@ -102,6 +103,7 @@ img {
       transform: translateX(-4px);
       transition: all 150ms ease;
       transition-delay: 50ms;
+      will-change: visibility, transform;
 
       &::before {
         content: "";
