--- a/public/styles/app.scss
+++ b/public/styles/app.scss
@@ -1,4 +1,4 @@
-@import '../node_modules/sn-stylekit/dist/stylekit.css';
+@import '../../node_modules/sn-stylekit/dist/stylekit.css';
 
 @import url('https://fonts.googleapis.com/css2?family=Noto+Sans+Hebrew:wght@400;700&family=Noto+Sans:wght@400;700&display=swap');
 
