--- a/components/modals/modal.module.css
+++ b/components/modals/modal.module.css
@@ -22,6 +22,7 @@
     padding: 24px;
     box-shadow: 0px 8px 18px rgb(0 0 0 / 8%), 0px 2px 8px rgb(0 0 0 / 12%);
     margin: auto;
+    position: relative;
 }
 
 .goToNote {
@@ -32,4 +33,12 @@
 	color: white;
 	width: 100%;
 	margin-top: 25px;
+}
+
+.closePopup {
+    position: absolute;
+    top: 0;
+    left: 0;
+    padding: 16px;
+    cursor: pointer;
 }
