--- a/public/styles/app.scss
+++ b/public/styles/app.scss
@@ -26,7 +26,7 @@ html {
 }
 
 body {
-	font-family: var(--sn-stylekit-sans-serif-font);
+	font-family: 'Noto Sans Hebrew', 'Noto Sans', Arial, sans-serif;
 	direction: rtl;
 	margin: 10px 35px 0px 35px;
 	// color: var(--sn-stylekit-editor-foreground-color);
