--- a/components/modals/modal.module.css
+++ b/components/modals/modal.module.css
@@ -33,6 +33,8 @@
 	color: white;
 	width: 100%;
 	margin-top: 25px;
+    display: block;
+    text-decoration: none
 }
 
 .closePopup {
@@ -41,4 +43,6 @@
     left: 0;
     padding: 16px;
     cursor: pointer;
+    height: 18px;
+    width: 18px;
 }
