--- a/components/modals/modal.module.css
+++ b/components/modals/modal.module.css
@@ -23,6 +23,7 @@
     box-shadow: 0px 8px 18px rgb(0 0 0 / 8%), 0px 2px 8px rgb(0 0 0 / 12%);
     margin: auto;
     position: relative;
+    text-align: center;
 }
 
 .goToNote {
@@ -31,7 +32,7 @@
 	padding: 16px 24px;
 	border-radius: 8px;
 	color: white;
-	width: 100%;
+	width: calc(100% - 48px);
 	margin-top: 25px;
     display: block;
     text-decoration: none
