Add api, flow state page and note saving

--- a/src/lib/components/focus.scss
+++ b/src/lib/components/focus.scss
@@ -49,11 +49,11 @@ h1 {
   margin: 0 0 20px 0;
 }
 
-input.focus-popup-time-input {
+span.focus-popup-time-span {
   text-align: center;
   border: none;
   font-size: 48px;
-  width: 36px;
+  width: 56px;
   text-align: left;
   margin-left: 12px;
 }
