--- a/src/app.scss
+++ b/src/app.scss
@@ -25,12 +25,25 @@ html {
   width: 100%;
 }
 
+@media (prefers-color-scheme: dark) {
+  body {
+    background-color: #181a1b;
+  }
+}
+
+@media (prefers-color-scheme: light) {
+  body {
+    background-color: transparent
+  }
+}
+
+
+
 body {
   font-family: var(--sn-stylekit-sans-serif-font);
   direction: rtl;
   margin: 10px 35px 0px 35px;
   // color: var(--sn-stylekit-editor-foreground-color);
-  background-color: transparent;
   font-size: 16px;
   overflow-x: hidden;
   max-width: 100vw;
@@ -249,4 +262,8 @@ img {
 .s6JM6d {
   max-width: 680px;
   width: 100%;
+}
+
+p {
+  transition: all 1000ms ease;
 }
