--- a/src/app.scss
+++ b/src/app.scss
@@ -264,6 +264,9 @@ p {
   body {
     background-color: #181a1b;
   }
+  p {
+    caret-color: white;
+  }
   .app-button-container .app-button {
     align-items: center;
     background: #00000036;
