--- a/src/lib/components/focus.scss
+++ b/src/lib/components/focus.scss
@@ -150,15 +150,18 @@ body.closing-focus-popup .focus-popup-content-container {
   bottom: 18px;
   left: 18px;
   color: black;
-  color: white;
+  background: #f6f8fa;
   padding: 14px 18px;
   border-radius: 8px;
-  box-shadow: 0 2px 8px 0 rgba(0, 0, 0, 0.12), inset 0 -1px 2px -1px rgba(255, 255, 255, 0.36), inset 0 1px 2px -1px rgba(255, 255, 255, 0.36);
+  box-shadow: 0 1px 0 rgba(31, 35, 40, 0.04), inset 0 1px 0 rgba(255, 255, 255, 0.25);
+  border: 1px solid rgb(31 35 40 / 15%);
 }
 
 @media (prefers-color-scheme: dark) {
   .timer-display {
     color: white;
     background: #1e1e1e;
+    border: none;
+    box-shadow: 0 2px 8px 0 rgba(0, 0, 0, 0.12), inset 0 -1px 2px -1px rgba(255, 255, 255, 0.36), inset 0 1px 2px -1px rgba(255, 255, 255, 0.36);
   }
 }
